fixing white space

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
-*{
-    margin: 0;
-    padding: 0;
+* {
+    margin-top: 0;
+    padding-top: 0;
 }
 
 body {
@@ -13,7 +13,7 @@ body {
 
   .mainHeader {
     margin-top: 0;
-      height: 60px;
+      height: 40px;
       background-color: #94c8c0;
   }
 
@@ -25,7 +25,7 @@ body {
 
   h1 {
     margin-left: 20px;
-    margin-top: 33%;
+    margin-top: 0;
       font-family: Arial, Helvetica, sans-serif;
       color: #ffffff;
       font-size: 30px;
